# Sparse-vLLM

./: .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: README.md
baselines/adakv/: README.md
baselines/kivi/: README.md
baselines/kvzip/: README.md
baselines/palu/: README.md  compress.py
baselines/quest/: .gitmodules  README.md
baselines/quest/kernels/: CMakeLists.txt
benchmark/: README.md  microbench.py  sanity.py  ssh_reverse_tunnel.sh
benchmark/claw_eval/: __init__.py  run_sparsevllm_claw_eval.sh  select_tasks.py  validate_results.py
benchmark/common/: ledger.py  paths.py
benchmark/long_bench/: eval.py  pred.py
benchmark/math_bench/: README.md  eval.py  pred.py
configs/: llama31_8b_hf_adakv_kr30_cr30.json  llama31_8b_hf_deltakv_compressor_kivi4_fp8ref_full_layers_0_1_2_8_18_center0p1_stride0p001.json  llama31_8b_hf_deltakv_compressor_kivi4_fp8ref_full_layers_0_1_2_8_18_center0p1_stride0p001_g32.json  llama31_8b_hf_deltakv_no_compressor_kivi4_fp8ref_full_layers_0_1_2_8_18_center0p1_stride0p001.json  llama31_8b_hf_kivi4_group32_residual32.json  llama31_8b_hf_omnikv_full_layers_0_1_2_8_18_kr100_cr30.json  llama31_8b_hf_pyramidkv_kr30_cr30.json  llama31_8b_hf_pyramidkv_truepyr_kr30_cr30.json  llama31_8b_hf_quest_kr100_cr30.json  llama31_8b_hf_snapkv_kr30_cr30.json  llama31_8b_hf_vanilla_chunk32768.json  qwen25_32b_hf_deltakv_ld512_kivi4_fp8ref_omnikvfull_kr30_ratio.json  qwen25_32b_hf_kvzip_kr30_cr30.json  qwen25_32b_hf_omnikv_full_layers_0_1_2_4_7_14_kr100_cr30.json  qwen25_32b_hf_pyramidkv_truepyr_kr30_cr30.json  qwen25_32b_hf_snapkv_kr30_cr30.json  qwen25_7b_1m_hf_kvzip_kr30_cr30.json  qwen25_7b_1m_hf_omnikv_full_layers_0_1_2_4_7_14_kr100_cr30.json  qwen25_7b_1m_hf_pyramidkv_truepyr_kr30_cr30.json  qwen2_5_32b_hf_kivi2_group32_residual32.json  qwen2_5_32b_hf_kivi4_group32_residual32.json  qwen2_5_7b_deltakv_less_memory_int2_dynamic_stride_paper_full_layers.json  qwen2_5_7b_hf_deltakv_compressed_quant_fp8ref_no_kivi_ld384ckpt_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_fp8ref_no_kivi_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_kr13_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_kr13p7_ld384ckpt_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_kr13p7_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_topratio0p11_latentgs32_ld384ckpt_paper_full_layers_center0p1_stride0.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_topratio0p11_latentgs32_ld384ckpt_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_topratio0p11_latentgs32_ld384ckpt_paper_full_layers_center0p1_stride0p02.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_topratio0p11_latentgs32_paper_full_layers_center0p1_stride0.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_topratio0p11_latentgs32_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_topratio0p11_ld384ckpt_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_fp8ref_topratio0p11_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_no_fp8ref_ld384ckpt_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_kivi4_no_fp8ref_paper_full_layers_center0p1_stride0p001.json  qwen2_5_7b_hf_deltakv_compressed_quant_no_kivi_no_fp8ref_topratio0p11_latentgs32_ld384ckpt_paper_full_layers_center0p1_stride0.json  qwen2_5_7b_hf_deltakv_compressed_quant_no_kivi_no_fp8ref_topratio0p11_latentgs32_paper_full_layers_center0p1_stride0.json  qwen2_5_7b_hf_deltakv_legacy_cr30_center0p1_stride0.json  qwen2_5_7b_hf_deltakv_legacy_cr30_ld384ckpt_center0p1_stride0.json  (+5 more)
dev_docs/: README.md  experiment-records.md  maintenance-todo.md  repo-review-2026-05-12.md
docs/: README.md  add-baseline-vs-main.md  llava-onevision-streamingbench.md  llava-onevision-visual-cache-benchmarks.md  repo-review-2026-05-12.md  research-code-guidelines.md  runtime-parameter-semantics.md  sparsevllm-control-map.md  sparsevllm-regression-tests.md
scripts/: README.md  audit_livevlm_table4_result.py  bench_llava_onevision_deltakv.py  bench_llava_onevision_rekv_qaego4d.py  bench_llava_onevision_streamingbench.py  bench_llava_onevision_visual_prune.py  bench_sparse_vllm.py  nohup_run_livevlm_table4_vanilla_after_download.sh  queue_scbench_llama_jobs.py  run_livevlm_table4_vanilla_after_download.sh  run_llama31_alpha_sweep_longbench_scbench_b0p17.sh  run_llama_deltasnapkv_missing.sh  run_llama_deltasnapkv_missing_ws2.sh  test_compressor_chunk_loss.py  test_llama_snapkv_init.py
tests/: test_claw_eval_results.py  test_claw_eval_runner.py  test_claw_eval_task_selection.py  test_decode_cuda_graph_tp_config.py  test_decode_kernel_bench_artifacts.py  test_deltakv_baseline_imports.py  test_deltakv_checkpoint_config_sync.py  test_deltakv_less_memory_kernel.py  test_engine_shutdown.py  test_fake_attention_backend.py  test_gqa_flash_decode_kernels.py  test_hf_deltakv_cache_factory.py  test_hf_deltakv_modeling.py  test_longbench_deltakv_contracts.py  test_math_bench_eval.py  test_microbench_artifacts.py  test_minference_prefill.py  test_minimax_m2_benchmark.py  test_minimax_m2_config.py  test_minimax_m2_fp8.py  test_minimax_m2_model.py  test_minimax_m2_moe_fp8.py  test_mlp_chunking.py  test_moe_config.py  test_omnikv_full_layer_selector.py  test_openai_api_server.py  test_openai_smart_router.py  test_optimize_kernel_reliably_skill.py  test_parallel_context.py  test_platforms.py  test_prefill_schedule_policy.py  test_prefill_score_bench_artifacts.py  test_prefill_score_kernel.py  test_prefill_score_kernel_extended.py  test_prefill_selection_trace.py  test_prefix_cache.py  test_profiler.py  test_qwen35_hd256_decode_routing.py  test_qwen35_mixed_runtime.py  test_qwen35_model_adapter.py  (+18 more)
(+358 files in other folders)
