[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakv"
version = "0.1.0"
description = "DeltaKV: Compressing KV Cache for Efficient Inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "DeltaKV Team"}
]
dependencies = [
    "fire",
    "torch",
    "transformers[torch]==4.53.3",
    "accelerate",
    "deepspeed",
    "datasets",
    "matplotlib",
    "seaborn",
    "wandb",
    "loguru",
    "ansible",
    "bitsandbytes",
    "flash-attn",
    "datatrove",
    "tqdm",
    "loguru",
    "math-verify==0.9.0",
]

[project.scripts]
deltakv-train = "deltakv.train_compressor:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["deltakv*", "sparsevllm*"]
