[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakv"
version = "0.1.0"
description = "DeltaKV: Compressing KV Cache for Efficient Inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "DeltaKV Team"}
]
dependencies = [
    "fire",
    "torch==2.8.0",
    "transformers==5.13.1",
    "triton==3.4.0",
    "torchvision==0.23.0",
    "pillow",
    "accelerate",
    "deepspeed",
    "datasets",
    "matplotlib",
    "seaborn",
    "wandb",
    "loguru",
    "ansible",
    "bitsandbytes",
    "datatrove",
    "tqdm",
    "loguru",
    "fastapi>=0.100",
    "uvicorn[standard]",
    "pydantic>=2",
    "pytest",
    "math-verify==0.9.0",
    "flashinfer-python>=0.6.14",
    "flashinfer-jit-cache>=0.6.14",
]

[project.optional-dependencies]
qwen35 = [
    "kernels==0.15.2",
    "einops",
    "sglang-kernel @ https://github.com/sgl-project/whl/releases/download/v0.3.14.post1/sgl_kernel-0.3.14.post1%2Bcu128-cp310-abi3-manylinux2014_x86_64.whl",
]
minimax_m2 = [
    "kernels==0.15.2",
]

[project.scripts]
deltakv-train = "deltakv.train_compressor:main"
sparsevllm-openai-server = "sparsevllm.entrypoints.openai.api_server:main"
sparsevllm-openai-router = "sparsevllm.entrypoints.openai.smart_router:main"
sparsevllm-openai-client = "sparsevllm.entrypoints.openai.client:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["deltakv*", "sparsevllm*"]
